--- a/css/main.css
+++ b/css/main.css
@@ -676,9 +676,7 @@ section h3.section-subheading {
     font-style: italic;
 }
 
-#portfolio * {
-    z-index: 2;
-}
+
 
 @media(min-width:767px) {
     #portfolio .portfolio-item {
@@ -1167,6 +1165,53 @@ body {
       background:goldenrod;
       
   }
+.black_overlay{
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        z-index:1001;
+        -moz-opacity: 0.8;
+        opacity:.80;
+        filter: alpha(opacity=80);
+    }
+    .white_content {
+        display: none;
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        right:0%;
+        bottom:0%;
+        width: 95%;
+        height: 95%;
+        padding: 15px;
+        border: 5px solid white;
+        background-color: black;
+        z-index:1002;
+        overflow: auto;
+        text-align:left;
+        border-radius:2px;
+        color:white;
+        transition: background .25s ease-in-out;
+   -moz-transition: background .25s ease-in-out;
+   -webkit-transition: background .25s ease-in-out;
+    }
+a:hover{
+    color: goldenrod
+}
+.blocky{
+    display:inline-block;
+}
+.closed{
+    color:aquamarine;
+    text-align: right;
+}
+.closed1{
+    color:cornflowerblue
+}
 .button{
     background:
 }
